avoid nasty wrapping

--- a/styles.css
+++ b/styles.css
@@ -46,6 +46,7 @@ nav a {
     background-color: #333;
     color: white;
     text-decoration: none;
+    white-space: nowrap;
 }
 a {
     color: inherit;
